--- a/README
+++ b/README
@@ -1,11 +1,4 @@
-
-                             Moontool 3.1
-
-What good is a Sun without a Moon?  This version of Moontool  includes
-versions  for SunView (moontool) and for OpenWindows (xmoontool).  The
-OpenWindows version should be portable to any platform  that  supports
-OLIT   3.0,  but  as  of  this  writing  I've  only  tested  it  on  a
-SparcStation.
+                             Moontool 3.0
 
 Moontool was designed and implemented by:
 
@@ -18,6 +11,11 @@ Major enhancements were made by Ron Hitchens:
     ...!uunet!cs.utah.edu!caeco!vixen!ronbo
     hitchens@cs.utexas.edu
 
+Revison and conversion into a CLI tool was done Oliver Webb:
+    
+    aquahobbyist@proton.me
+    https://www.github.com/oliverkwebb
+
 John Walker created the initial OpenWindows version of Moontool.
 
 This  program is in the public domain: "Do what thou wilt shall be the
@@ -26,5 +24,5 @@ enhancements,  which  I'll  incorporate  in  future  versions  of  the
 program.  Please leave the original attribution information intact  so
 that credit and blame may be properly apportioned.
 
-Sources  for  the  algorithms  used  by  the  program are cited in the
-comments at the beginning of moontool.c and xmoontool.c.
+Sources  for  the  algorithms used by the program are cited in the
+comments at the beginning of moontool.c.
