Added toybox test suite, Finished 1st stage of revision

--- a/moontool.1
+++ b/moontool.1
@@ -1,10 +1,10 @@
-.TH MOONTOOL 1 "31 JULY 1989"
+.TH MOONTOOL 1 "15 JULY 2024"
 .UC 4
 .SH NAME
-moontool \- Moon For The Sun / Werewolf Early Warning System
+moontool \- Werewolf Early Warning System
 .SH SYNOPSIS
 .B moontool
-[-mcbt]
+[-t UNIXTIME] [-f FORMATTING] [-h]
 .SH DESCRIPTION
 .B Moontool
 is a SunView application which displays information about the moon in
@@ -132,8 +132,7 @@ Original author of
 (the one who did the hard part).
 .PP
 Ron Hitchens, Independent Hacker.  Adder-on of various "features" and
-"improvements".  Culprit responsible for this stoopid
-man page.
+"improvements".  Culprit responsible for this stoopid man page.
 .br
  ronbo@vixen.uucp
 .br
