--- a/README
+++ b/README
@@ -1,28 +1,50 @@
-                             Moontool 3.0
+		phoon - display current moon phase
 
-Moontool was designed and implemented by:
 
-    John Walker
-    http://www.fourmilab.ch/
+phoon - program to display the PHase of the mOON.  Unlike other
+such programs, which just tell you how long since first quarter
+or something like that, phoon *shows* you the phase with a little
+picture.  I've put an example at the end of this file.  I first
+wrote this program in Pascal / TOPS-20 at CMU in 1979; I translated
+it to Ratfor / Software Tools in 1981; and now it's in C / Unix.
 
-Major enhancements were made by Ron Hitchens:
+Files in this distribution:
 
-    ronbo@vixen.uucp
-    ...!uunet!cs.utah.edu!caeco!vixen!ronbo
-    hitchens@cs.utexas.edu
+    README		this
+    Makefile		guess
+    phoon.c		phase of moon display
+    astro.c		phase of moon calculations
+    astro.h		header file
+    phoon.1		manual for phase of moon program
+    date_parse.c	date-parsing routine
+    date_parse.h	header file
 
-Revison and conversion into a CLI tool was done Oliver Webb:
-    
-    aquahobbyist@proton.me
-    https://www.github.com/oliverkwebb
+Unpack the files, edit Makefile and change the options to suit, make,
+and enjoy!  Feedback is welcome - send bug reports, enhancements,
+checks, money orders, etc. to the addresses below.
 
-John Walker created the initial OpenWindows version of Moontool.
+    Jef Poskanzer  jef@mail.acme.com  http://www.acme.com/jef/
 
-This  program is in the public domain: "Do what thou wilt shall be the
-whole of the law".  I'd appreciate  receiving  any  bug  fixes  and/or
-enhancements,  which  I'll  incorporate  in  future  versions  of  the
-program.  Please leave the original attribution information intact  so
-that credit and blame may be properly apportioned.
-
-Sources  for  the  algorithms used by the program are cited in the
-comments at the beginning of moontool.c.
+                 .--
+             .--
+          .-' 
+       .-'@ 
+      /@@@ 
+    ./    
+   /@@  o
+  /@@@@  
+  |@@@@@
+ /@@@@@ 		Last Quarter + 
+ | @@@@ 		4  1:36:10
+ |@ @@@			New Moon -     
+ |      		3  7:34:53
+ \  . @ 
+  |     
+  \     @
+   \  o  
+    `\    
+      \    
+       `-.  
+          `-. 
+             `--
+                 `--
